@@ -1,5 +1,7 @@
 Changes in Release 2.2.4
 =============================================
+*** NOTE: All deprecated methods will be removed in OpenSAML 2.3.0
+[JOST-28] - BaseSAML1MessageDecoder and subclasses mistakenly take an ArtifactMap as a constructor arg
 [JOST-69] - BasicSAMLArtifactMap dereferences a pointer that might be null
 [JOST-76] - Relax requirement that HTTP requests be GETs when using Redirect and Artifact Binding
 [JOST-77] - Metadata refresh causes ConcurrentModificationException and idp failure
